--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
      
     Write some text in textbox:
-    <input type="text" ng-model="sometext" />
+    <input type="text" ng-model="InputText" />
  
-    <h1>Hello {{ sometext }}</h1>
+    <h1>Hello {{ InputText }}</h1>
      
 </body>
 </html>
